<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/LightGray">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:background="@android:color/white"
            android:padding="@dimen/margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColorHint="@color/detail_hint_txt_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/et_date"
                    style="@style/nonEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/calendar"
                    android:hint="@string/main_date"
                    android:maxLength="15"
                    android:onClick="actionDate"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/detail_txt_color" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tv_payment_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColorHint="@color/detail_hint_txt_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_date">

                <EditText
                    android:id="@+id/et_payment_type"
                    style="@style/nonEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/dropdown"
                    android:hint="@string/main_payment"
                    android:onClick="actionPayment"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/detail_txt_color" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tv_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColorHint="@color/detail_hint_txt_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_payment_type">

                <EditText
                    android:id="@+id/et_from"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/main_from"
                    android:inputType="text"
                    android:maxLength="100"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/detail_txt_color" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tv_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:textColorHint="@color/detail_hint_txt_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_from">

                <EditText
                    android:id="@+id/et_to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/main_to"
                    android:inputType="text"
                    android:maxLength="100"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/detail_txt_color" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColorHint="@color/detail_hint_txt_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_to">

                <EditText
                    android:id="@+id/et_gross_amt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/main_gross"
                    android:inputType="numberDecimal"
                    android:maxLength="10"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/detail_txt_color" />
            </android.support.design.widget.TextInputLayout>
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</layout>